--- a/MASReportTool/MASReportTool.csproj
+++ b/MASReportTool/MASReportTool.csproj
@@ -42,6 +42,7 @@
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.12.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="PresentationFramework.Aero2" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -72,6 +73,7 @@
     <Compile Include="Picture.cs" />
     <Compile Include="ProjectInfo.cs" />
     <Compile Include="Report.cs" />
+    <Compile Include="ResultClassRadioBtnConverter.cs" />
     <Compile Include="ResultStringBoolConverter.cs" />
     <Compile Include="ResultStringConverter.cs" />
     <Compile Include="Rule.cs" />
