--- a/MASReportTool/MASReportTool.csproj
+++ b/MASReportTool/MASReportTool.csproj
@@ -67,25 +67,25 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="FunctionBarViewModel.cs" />
-    <Compile Include="IsSavedColorConverter.cs" />
+    <Compile Include="ViewModels\FunctionBarViewModel.cs" />
+    <Compile Include="ValueConverters\IsSavedColorConverter.cs" />
     <Compile Include="JsonFileController.cs" />
     <Compile Include="MASData.cs" />
     <Compile Include="Picture.cs" />
     <Compile Include="ProjectInfo.cs" />
     <Compile Include="RelayCommand.cs" />
     <Compile Include="Report.cs" />
-    <Compile Include="ResultClassRadioBtnConverter.cs" />
-    <Compile Include="ResultStringBoolConverter.cs" />
-    <Compile Include="ResultStringConverter.cs" />
-    <Compile Include="ResultStringIconConverter.cs" />
+    <Compile Include="ValueConverters\ResultClassRadioBtnConverter.cs" />
+    <Compile Include="ValueConverters\ResultStringBoolConverter.cs" />
+    <Compile Include="ValueConverters\ResultStringConverter.cs" />
+    <Compile Include="ValueConverters\ResultStringIconConverter.cs" />
     <Compile Include="Rule.cs" />
     <Compile Include="RuleContents.cs" />
     <Compile Include="RuleResults.cs" />
     <Compile Include="SubRuleContents.cs" />
     <Compile Include="SubRuleResult.cs" />
-    <Compile Include="TreeViewItems.cs" />
-    <Compile Include="VisibilityBoolConverter.cs" />
+    <Compile Include="ViewModels\TreeViewItems.cs" />
+    <Compile Include="ValueConverters\VisibilityBoolConverter.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
