--- a/MASReportTool/MASReportTool.csproj
+++ b/MASReportTool/MASReportTool.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{DE4B3A51-FC1E-4556-9A35-4A9C8B9E8018}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>WpfApp1</RootNamespace>
-    <AssemblyName>WpfApp1</AssemblyName>
+    <RootNamespace>MASReportTool</RootNamespace>
+    <AssemblyName>MASReportTool</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -84,7 +84,8 @@
     <Compile Include="RuleResults.cs" />
     <Compile Include="SubRuleContents.cs" />
     <Compile Include="SubRuleResult.cs" />
-    <Compile Include="ViewModels\TreeViewItems.cs" />
+    <Compile Include="ViewModels\PicturePageViewModel.cs" />
+    <Compile Include="ViewModels\TreeViewItemsViewModel.cs" />
     <Compile Include="ValueConverters\VisibilityBoolConverter.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
