新增 MASReport 類別處理報告docx檔的輸出

--- a/MASReportTool/MASReportTool.csproj
+++ b/MASReportTool/MASReportTool.csproj
@@ -74,6 +74,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="BindingProxy.cs" />
+    <Compile Include="MASReport.cs" />
     <Compile Include="ViewModels\FunctionBarViewModel.cs" />
     <Compile Include="ValueConverters\IsSavedColorConverter.cs" />
     <Compile Include="JsonFileController.cs" />
